# early-cloudsql-notification

./: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  run.sh
src/csql_maintenance/: __main__.py  maintenance.py  notification.py  template.json
